--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 # Build artifacts
 build/
-dist/
+
+# Dist directory - ignore all, but keep the main executable
+dist/*
+!dist/TunnelManager
+
 *.spec
 
 # Virtual environment
