重建win构建脚本与构建好的exe文件

--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,8 @@ build/
 
 # Dist directory - ignore all, but keep the main executable
 dist/*
+!dist/TunnelManager.exe
 !dist/TunnelManager
-
 *.spec
 
 # Virtual environment
