修复win打包无法运行，现打包成zip，自行解压运行

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@ build/
 
 # Dist directory - ignore all, but keep the main executable
 dist/*
-!dist/TunnelManager.exe
+!dist/TunnelManager.zip
 !dist/TunnelManager
 *.spec
 
